fix for logtables ajax

--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -5,8 +5,8 @@ Control Room Log
 {% block layout %}
     {% embed '3-9.html.twig' %}
         {% block content %}
-            <div class="wrapper">
-                <div class="row" id="logTable">
+            <div class="wrapper" id="logTable">
+                <div class="row">
                     <div class="col-md-12">
                         <h4>Log Entries</h4>
                     </div>
