--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -132,6 +132,7 @@ Control Room Log
             $.ajax({
                 type:'POST',
                 url: '{{ path('full_log_table') }}',
+                data: {sort: '{{ app.request.get('sort') }}', filter: '{{ app.request.get('filter') }}', filter_type: '{{ app.request.get('filter_type') }}'},
                 cache: false,
                 global: false,
                 success:function(data)
