--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -131,8 +131,7 @@ Control Room Log
         function tablePoll(){
             $.ajax({
                 type:'POST',
-                url: '{{ path('full_log_table') }}',
-                data: {sort: '{{ app.request.get('sort') }}', filter: '{{ app.request.get('filter') }}', filter_type: '{{ app.request.get('filter_type') }}'},
+                url: '{{ path('full_log_table') }}/{% if app.request.get('sort') %}{{ app.request.get('sort') }}/{% endif %}{% if app.request.get('filter') %}{{ app.request.get('filter') }}/{% endif %}{% if app.request.get('filter_type') %}{{ app.request.get('filter_type') }}',
                 cache: false,
                 global: false,
                 success:function(data)
