--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -136,7 +136,10 @@ Control Room Log
                 global: false,
                 success:function(data)
                 {
-                $("#logTable").html(data);
+                    if (data != $("#logTable").html())
+                    {
+                        $("#logTable").html(data);
+                    }
                 }
             });
             setTimeout(tablePoll,5000);
