Adding venue skew

--- a/app/Resources/views/peoplecounting.html.twig
+++ b/app/Resources/views/peoplecounting.html.twig
@@ -43,7 +43,7 @@
                                         <td>{{ venue.count.running_count_out }}</td>
                                         <td>{{ venue.count.running_count_in-venue.count.running_count_out }}</td>
                                         <td><a href="{{ path('venue_doors', {'id': venue.id}) }}"><span class="glyphicon glyphicon-check" onclick="return confirm('Are you sure you want to set doors for the {{ venue.name }}?')" aria-hidden="true" aria-label="Set doors?"></span></a></td>
-                                        <td><a href="#"><span class="glyphicon glyphicon-list-alt" aria-hidden="true" aria-label="Adjust skew value"></span></a></td>
+                                        <td><a href="{{ path('skew', {'id': venue.id}) }}"><span class="glyphicon glyphicon-list-alt" aria-hidden="true" aria-label="Adjust skew value"></span></a></td>
                                     </tr>
                                 {% endfor %}
                                 </tbody>
