change to log js

--- a/app/Resources/views/log.html.twig
+++ b/app/Resources/views/log.html.twig
@@ -136,7 +136,7 @@ Control Room Log
                 global: false,
                 success:function(data)
                 {
-                    if (data != $("#logTable").html())
+                    if ($("#logTable").html() !== data)
                     {
                         $("#logTable").html(data);
                     }
