debugging sidebar json

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -155,9 +155,8 @@
         });
         
         $.getJSON('{{ path('log_json_data') }}', function(data) {
-            $.each(data, function(index, log) {
-                $('#logTotal-'+index).html(log.index);
-            });
+            $('#logTotal-Total').html(data.Total);
+            $('#logTotal-Open').html(data.Open);
         });
         
         i++;
