--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -155,8 +155,8 @@
         });
         
         $.getJSON('{{ path('log_json_data') }}', function(data) {
-            $('#logTotal-Total').html(data.Total);
-            $('#logTotal-Open').html(data.Open);
+            $('#logTotal-Total').html(data['Total']);
+            $('#logTotal-Open').html(data['Open']);
         });
         
         i++;
