--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -120,6 +120,19 @@
         Code of Practice
     </div>
 </a>
+<div class="row">
+        <h4>Control Room Functions</h4>
+</div>
+<a href="#"  target="_blank" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+    <div class="row">
+        Full Working Light
+    </div>
+</a
+<a href="#"  target="_blank" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+    <div class="row">
+        Control Mode Working Light
+    </div>
+</a>
 <br>
 <script type="text/javascript">
     $(document).ready(function() {
