Added status as button to sidebar

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -125,6 +125,11 @@
 </div>
 <a href="#" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
+        
+    </div>
+</a>
+<a href="#" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+    <div class="row">
         Full Working Light
     </div>
 </a>
