LED Sidebar updat

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -138,6 +138,11 @@
         Control Mode Working Light
     </div>
 </a>
+<a href="#" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+    <div class="row">
+        Lighting Off
+    </div>
+</a>
 <br>
 <script type="text/javascript">
     $(document).ready(function() {
