--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -123,26 +123,26 @@
 <div class="row">
         <h4>Control Room Functions</h4>
 </div>
-<a href="#" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+<div class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         <br>
     </div>
-</a>
-<a href="#" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+</div>
+<div class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         Full Working Light
     </div>
-</a>
-<a href="#" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+</div>
+<div class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         Control Mode Working Light
     </div>
-</a>
-<a href="#" class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
+</div>
+<div class="btn btn-default btn-block" style="margin-bottom:4px;white-space: normal;" role="button">
     <div class="row">
         Lighting Off
     </div>
-</a>
+</div>
 <br>
 <script type="text/javascript">
     $(document).ready(function() {
