--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -180,20 +180,23 @@
                 }
             });
         });
-        
-        
+
+
         $.getJSON('{{ path('venue_json_data') }}', function(data) {
             $.each(data, function(index, venue) {
                 //Calculate current occupancy
                 var count = venue['count'].running_count_in - venue['count'].running_count_out;
                 $('#venue-'+venue.id).html(venue.name + ": "+ count);
                 var offset = (new Date()).getTimezoneOffset();
-                var lastrecord = new Date(venue['doors'].date - offset);
-                alert(lastrecord);
+                var lastrecord = new Date(venue['doors'].date);
+                var now = new Date();
+                if((now.getTime() - lastrecord.getTime() - offset)>300000){
 
+                    alert("old!");
+                }
             });
         });
-        
+
         $.getJSON('{{ path('log_json_data') }}', function(data) {
             $('#logTotal-Total').html(data['Total']);
             $('#logTotal-Open').html(data['Open']);
