Modified colours to be match Bootstrap brighter colours

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -44,25 +44,25 @@
 }
 
 @-webkit-keyframes argh-my-eyes {
-    0%   { background-color: #f2dede; }
-    49% { background-color: #f2dede; }
+    0%   { background-color: #d9534f; }
+    49% { background-color: #d9534f; }
     50% { background-color: white; }
     99% { background-color: white; }
-    100% { background-color: #f2dede; }
+    100% { background-color: #d9534f; }
 }
 @-moz-keyframes argh-my-eyes {
-    0%   { background-color: #f2dede; }
-    49% { background-color: #f2dede; }
+    0%   { background-color: #d9534f; }
+    49% { background-color: #d9534f; }
     50% { background-color: white; }
     99% { background-color: white; }
-    100% { background-color: #f2dede; }
+    100% { background-color: #d9534f; }
 }
 @keyframes argh-my-eyes {
-    0%   { background-color: #f2dede; }
-    49% { background-color: #f2dede; }
+    0%   { background-color: #d9534f; }
+    49% { background-color: #d9534f; }
     50% { background-color: white; }
     99% { background-color: white; }
-    100% { background-color: #f2dede; }
+    100% { background-color: #d9534f; }
 }
 .flash {
     -webkit-animation: argh-my-eyes 1s infinite;
