--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -187,10 +187,7 @@
                 //Calculate current occupancy
                 var count = venue['count'].running_count_in - venue['count'].running_count_out;
                 $('#venue-'+venue.id).html(venue.name + ": "+ count);
-                var offset = (new Date()).getTimezoneOffset();
-                var lastrecord = new Date(venue['doors'].date);
-                var now = new Date();
-               if((now.getTime() - (lastrecord.getTime() - (offset*60000)))>300000){
+                if(venue.status == "false"){
                     console.log("old!")
                    $('#venue-'+venue.id).addClass("flash");
                 }else{
