--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -171,9 +171,9 @@
                 {
                     var statusString = "UPS" + ups.id + ": "+ ups.status+" (Load="+ups.load + ")";
                 }
-                else if (ups.batteryVoltage != null && ups.status == "Battery")
+                else if (ups.battery != null && ups.status == "Battery")
                 {
-                    var statusString = "UPS" + ups.id + ": "+ ups.status+" (BattV="+ups.batteryVoltage + ")";
+                    var statusString = "UPS" + ups.id + ": "+ ups.status+" (BattV="+ups.battery + ")";
                 }
                 else
                 {
