--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -179,7 +179,7 @@
                 {
                     var statusString = "UPS" + ups.id + ": "+ ups.status;
                 }
-                if ($('#ups-'+ups.id).html().split('(')[0] != statusString.split('(')[0])
+                if ($('#ups-'+ups.id).html().split(' (')[0] != statusString.split('(')[0])
                 {
                     if (i > 5)
                     {
@@ -187,8 +187,15 @@
                         $('#ups'+ups.id+'ModalBody').html("Status: " + ups.status + "<br>Location: " + ups.location)
                         $('#ups'+ups.id+'Modal').modal('show')
                     }
+                    //$('#ups-'+ups.id).html(statusString);
+                }
+                
+                if ($('#ups-'+ups.id).html() != statusString)
+                {
                     $('#ups-'+ups.id).html(statusString);
                 }
+                
+                
             });
         });
 
