--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -179,13 +179,13 @@
                 {
                     var statusString = "UPS" + ups.id + ": "+ ups.status;
                 }
-                if ($('#ups-'+ups.id).html().split(' (')[0] != statusString.split(' (')[0])
+                if ($('#ups-'+ups.id).html().split(' (')[0] !== statusString.split(' (')[0])
                 {
                     if (i > 5)
                     {
-                        $('#ups'+ups.id+'ModalLabel').html("UPS " + ups.id + " " + ups.name)
-                        $('#ups'+ups.id+'ModalBody').html("Status: " + ups.status + "<br>Location: " + ups.location)
-                        $('#ups'+ups.id+'Modal').modal('show')
+                        $('#ups'+ups.id+'ModalLabel').html("UPS " + ups.id + " " + ups.name);
+                        $('#ups'+ups.id+'ModalBody').html("Status: " + ups.status + "<br>Location: " + ups.location);
+                        $('#ups'+ups.id+'Modal').modal('show');
                     }
                     //$('#ups-'+ups.id).html(statusString);
                 }
