--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -70,9 +70,7 @@
     </div>
     <ul class="list-group">
         {% for ups in UPSs %}
-            <div class="row" data-toggle="tooltip" data-placement="right" title="{{ ups.name }} - {{ ups.location }}">
-                <li class="list-group-item" id="ups-{{ ups.id }}">UPS{{ ups.id }}: Timeout</li>
-            </div>
+            <li class="list-group-item" id="ups-{{ ups.id }}" data-toggle="tooltip" data-placement="right" title="{{ ups.name }} - {{ ups.location }}">UPS{{ ups.id }}: Timeout</li>
         {% endfor %}
     </ul>
 </div>
