Commented out sidebar ocupancy count functions as causing js errors

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -84,7 +84,7 @@ Event Entry Form
     <script type="text/javascript">
         $(function () {
             $('#datetimepicker1').datetimepicker({
-                useCurrent: true,
+                useCurrent: false,
                 format: 'YYYY-MM-DD HH:mm:ss',
                 showTodayButton: true
             });
